# omk-python-project-template

./: .gitignore  CHANGELOG  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt
conf/: config.yaml
conf/data/: default.yaml
conf/model/: default.yaml
conf/pipeline/: default.yaml
src/core/: pipeline.py
tools/: clean_cache.py  debug_env.py  helpers.py
